add template project

--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -1,10 +1,17 @@
 header.header
     .wrapper
-        .parent
-            .child Header
-                .icon.icon-png
-                .icon.icon-webp
-                .svg-mouse.svg-mouse-box
-            .child Header2
-            img(src="assets/icons/svg/spriteSVG.svg#mouse" alt="")
-            button click
+        .headerFlexContainer
+            .headerLogo
+                img(src="assets/images/png/logo.png", alt="logo")
+            .headerNav
+                //- .child Header
+                nav.headerNavLinks
+                    a(href="javascript:void(0)") RS chip 
+                    a(href="javascript:void(0)") GTR Chip 
+                    a(href="javascript:void(0)") Gas pedal 
+                    a(href="javascript:void(0)") Tuning 
+                    a(href="javascript:void(0)") Support 
+                    a(href="javascript:void(0)") Contact us
+                .headerNavCart
+                .headerNavBtn
+                .headerNavMobileMenu
