--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,11 +5,8 @@ block content
 	include ../components/header/header.component.pug
 	include ../components/some/some.component.pug
 	main.page
-		section.banner
-			.wrapper
-				h1.page__title-h1 Title h1 Index
-				p.page__text Any textp
-				a(href="page/page.html").page__text page2
+		include ../components/banner/banner.component.pug
+		a(href="page/page.html").page__text page2
 block append style
 	
 block append script
