--- a/src/sass/base/base.sass
+++ b/src/sass/base/base.sass
@@ -15,8 +15,9 @@
 
 body 
   font-family: $fontRegular
-  background: #ccc
-  // margin: 0
+  background: #eee
+  // background: $color_black
+  // color: $color_white
 
 a, button
   cursor: pointer
