--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1,28 +1,50 @@
 /* __debugGrid__ */
 .debugGrid
-    @include debug(rgba(0, 0, 0, 0.4), 1px solid #ff0)
+    height: 100vh
+    position: fixed
+    width: 100%
+    
+    .wrapper
+        height: inherit
+        
+    .parentFlex
+        height: inherit
+        +row-flex()
+            
+    .childFlex
+        +col()
+        +size(1)
+        height: inherit
+        outline:  1px solid #ff0
+        background: rgba(0, 0, 0, 0.4)
     @include debugBtn()
 /* __debugGrid__ */
+/*banner*/
+.banner
+    
+.bannerFlexContainer
+    +row-flex()
+/*header*/
 .header
-    .parent
-        +row-flex()
-        width: 1000px
-        .child
-            /*child*/
-            +col()
-            +size(12)
-            // +size-sm(6)
-            font-size: 40px
-            width: 320px
-            margin: 1px 2px 1px
-            +xs-block
-                font-size: 50px
-                width: 567px
-                margin: 2px 3px 2px
-           
-            +sm-block
-                font-size: 60px
-                width: 768px
-                margin: 3px 4px 3px
+    
+.headerFlexContainer
+    +row-flex()
+.headerLogo
+    +col()
+    +size(9/2)
+    +size-lg(9/2)
+.headerNav
+.child
+    /*child*/
+    +col()
+    +size(9)
+    +size-lg(9/2)
+    font-size: 40px
+    +xs-block
+        font-size: 50px
+
+    +sm-block
+        font-size: 60px
+
 /*some*/
 /*some2*/
