--- a/src/sass/sprite/png/spritePNG.sass
+++ b/src/sass/sprite/png/spritePNG.sass
@@ -9,32 +9,131 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites
 $icon-fb-png-name: 'icon-fb-png'
-$icon-fb-png-x: 0px
+$icon-fb-png-x: 212px
 $icon-fb-png-y: 0px
-$icon-fb-png-offset-x: 0px
+$icon-fb-png-offset-x: -212px
 $icon-fb-png-offset-y: 0px
 $icon-fb-png-width: 40px
 $icon-fb-png-height: 40px
-$icon-fb-png-total-width: 80px
-$icon-fb-png-total-height: 40px
+$icon-fb-png-total-width: 252px
+$icon-fb-png-total-height: 230px
 $icon-fb-png-image: '../assets/icons/png/spritePNG.png'
-$icon-fb-png: (0px, 0px, 0px, 0px, 40px, 40px, 80px, 40px, '../assets/icons/png/spritePNG.png', 'icon-fb-png', )
+$icon-fb-png: (212px, 0px, -212px, 0px, 40px, 40px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'icon-fb-png', )
 $icon-tw-png-name: 'icon-tw-png'
-$icon-tw-png-x: 40px
-$icon-tw-png-y: 0px
-$icon-tw-png-offset-x: -40px
-$icon-tw-png-offset-y: 0px
+$icon-tw-png-x: 212px
+$icon-tw-png-y: 40px
+$icon-tw-png-offset-x: -212px
+$icon-tw-png-offset-y: -40px
 $icon-tw-png-width: 40px
 $icon-tw-png-height: 40px
-$icon-tw-png-total-width: 80px
-$icon-tw-png-total-height: 40px
+$icon-tw-png-total-width: 252px
+$icon-tw-png-total-height: 230px
 $icon-tw-png-image: '../assets/icons/png/spritePNG.png'
-$icon-tw-png: (40px, 0px, -40px, 0px, 40px, 40px, 80px, 40px, '../assets/icons/png/spritePNG.png', 'icon-tw-png', )
-$spritesheet-width: 80px
-$spritesheet-height: 40px
+$icon-tw-png: (212px, 40px, -212px, -40px, 40px, 40px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'icon-tw-png', )
+$icon-cart-png-name: 'iconCart-png'
+$icon-cart-png-x: 212px
+$icon-cart-png-y: 113px
+$icon-cart-png-offset-x: -212px
+$icon-cart-png-offset-y: -113px
+$icon-cart-png-width: 27px
+$icon-cart-png-height: 27px
+$icon-cart-png-total-width: 252px
+$icon-cart-png-total-height: 230px
+$icon-cart-png-image: '../assets/icons/png/spritePNG.png'
+$icon-cart-png: (212px, 113px, -212px, -113px, 27px, 27px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconCart-png', )
+$icon-chat-png-name: 'iconChat-png'
+$icon-chat-png-x: 0px
+$icon-chat-png-y: 0px
+$icon-chat-png-offset-x: 0px
+$icon-chat-png-offset-y: 0px
+$icon-chat-png-width: 212px
+$icon-chat-png-height: 212px
+$icon-chat-png-total-width: 252px
+$icon-chat-png-total-height: 230px
+$icon-chat-png-image: '../assets/icons/png/spritePNG.png'
+$icon-chat-png: (0px, 0px, 0px, 0px, 212px, 212px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconChat-png', )
+$icon-facebook-png-name: 'iconFacebook-png'
+$icon-facebook-png-x: 239px
+$icon-facebook-png-y: 113px
+$icon-facebook-png-offset-x: -239px
+$icon-facebook-png-offset-y: -113px
+$icon-facebook-png-width: 10px
+$icon-facebook-png-height: 17px
+$icon-facebook-png-total-width: 252px
+$icon-facebook-png-total-height: 230px
+$icon-facebook-png-image: '../assets/icons/png/spritePNG.png'
+$icon-facebook-png: (239px, 113px, -239px, -113px, 10px, 17px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconFacebook-png', )
+$icon-info-png-name: 'iconInfo-png'
+$icon-info-png-x: 212px
+$icon-info-png-y: 80px
+$icon-info-png-offset-x: -212px
+$icon-info-png-offset-y: -80px
+$icon-info-png-width: 33px
+$icon-info-png-height: 33px
+$icon-info-png-total-width: 252px
+$icon-info-png-total-height: 230px
+$icon-info-png-image: '../assets/icons/png/spritePNG.png'
+$icon-info-png: (212px, 80px, -212px, -80px, 33px, 33px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconInfo-png', )
+$icon-instagram-png-name: 'iconInstagram-png'
+$icon-instagram-png-x: 0px
+$icon-instagram-png-y: 212px
+$icon-instagram-png-offset-x: 0px
+$icon-instagram-png-offset-y: -212px
+$icon-instagram-png-width: 18px
+$icon-instagram-png-height: 18px
+$icon-instagram-png-total-width: 252px
+$icon-instagram-png-total-height: 230px
+$icon-instagram-png-image: '../assets/icons/png/spritePNG.png'
+$icon-instagram-png: (0px, 212px, 0px, -212px, 18px, 18px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconInstagram-png', )
+$icon-location-png-name: 'iconLocation-png'
+$icon-location-png-x: 212px
+$icon-location-png-y: 140px
+$icon-location-png-offset-x: -212px
+$icon-location-png-offset-y: -140px
+$icon-location-png-width: 20px
+$icon-location-png-height: 25px
+$icon-location-png-total-width: 252px
+$icon-location-png-total-height: 230px
+$icon-location-png-image: '../assets/icons/png/spritePNG.png'
+$icon-location-png: (212px, 140px, -212px, -140px, 20px, 25px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconLocation-png', )
+$icon-mail-png-name: 'iconMail-png'
+$icon-mail-png-x: 212px
+$icon-mail-png-y: 165px
+$icon-mail-png-offset-x: -212px
+$icon-mail-png-offset-y: -165px
+$icon-mail-png-width: 24px
+$icon-mail-png-height: 17px
+$icon-mail-png-total-width: 252px
+$icon-mail-png-total-height: 230px
+$icon-mail-png-image: '../assets/icons/png/spritePNG.png'
+$icon-mail-png: (212px, 165px, -212px, -165px, 24px, 17px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconMail-png', )
+$icon-phone-png-name: 'iconPhone-png'
+$icon-phone-png-x: 232px
+$icon-phone-png-y: 140px
+$icon-phone-png-offset-x: -232px
+$icon-phone-png-offset-y: -140px
+$icon-phone-png-width: 17px
+$icon-phone-png-height: 25px
+$icon-phone-png-total-width: 252px
+$icon-phone-png-total-height: 230px
+$icon-phone-png-image: '../assets/icons/png/spritePNG.png'
+$icon-phone-png: (232px, 140px, -232px, -140px, 17px, 25px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconPhone-png', )
+$icon-youtube-png-name: 'iconYoutube-png'
+$icon-youtube-png-x: 212px
+$icon-youtube-png-y: 182px
+$icon-youtube-png-offset-x: -212px
+$icon-youtube-png-offset-y: -182px
+$icon-youtube-png-width: 22px
+$icon-youtube-png-height: 16px
+$icon-youtube-png-total-width: 252px
+$icon-youtube-png-total-height: 230px
+$icon-youtube-png-image: '../assets/icons/png/spritePNG.png'
+$icon-youtube-png: (212px, 182px, -212px, -182px, 22px, 16px, 252px, 230px, '../assets/icons/png/spritePNG.png', 'iconYoutube-png', )
+$spritesheet-width: 252px
+$spritesheet-height: 230px
 $spritesheet-image: '../assets/icons/png/spritePNG.png'
-$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, )
-$spritesheet: (80px, 40px, '../assets/icons/png/spritePNG.png', $spritesheet-sprites, )
+$spritesheet-sprites: ($icon-fb-png, $icon-tw-png, $icon-cart-png, $icon-chat-png, $icon-facebook-png, $icon-info-png, $icon-instagram-png, $icon-location-png, $icon-mail-png, $icon-phone-png, $icon-youtube-png, )
+$spritesheet: (252px, 230px, '../assets/icons/png/spritePNG.png', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
 //
