--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -6,12 +6,14 @@ header.header
             .headerNav
                 //- .child Header
                 nav.headerNavLinks
-                    a(href="javascript:void(0)") RS chip 
-                    a(href="javascript:void(0)") GTR Chip 
-                    a(href="javascript:void(0)") Gas pedal 
-                    a(href="javascript:void(0)") Tuning 
-                    a(href="javascript:void(0)") Support 
-                    a(href="javascript:void(0)") Contact us
+                    a.headerLink(href="javascript:void(0)") RS chip 
+                    a.headerLink(href="javascript:void(0)") GTR Chip 
+                    a.headerLink(href="javascript:void(0)") Gas pedal 
+                    a.headerLink(href="javascript:void(0)") Tuning 
+                    a.headerLink(href="javascript:void(0)") Support 
+                    a.headerLink(href="javascript:void(0)") Contact us
                 .headerNavCart
+                    .icon-cart-png
                 .headerNavBtn
+                    
                 .headerNavMobileMenu
