--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1,3 +1,22 @@
+/*banner*/
+.banner
+    overflow: hidden
+    .page__title-h1_big
+        +shift-right(-6)
+
+.bannerFlexContainer
+    +row-flex()
+    align-items: center
+.bannerText
+    +col()
+    +size-lg(3)
+    position: relative
+.bannerImg
+    +col()
+    +size-lg(9)
+    +shift-right(-3)
+    img
+        // width: 100%
 /* __debugGrid__ */
 .debugGrid
     height: 100vh
@@ -19,21 +38,32 @@
         background: rgba(0, 0, 0, 0.4)
     @include debugBtn()
 /* __debugGrid__ */
-/*banner*/
-.banner
-    
-.bannerFlexContainer
-    +row-flex()
 /*header*/
 .header
-    
+    position: sticky
+    top: 0
+    height: 59px
+    margin-bottom: -70px
+
 .headerFlexContainer
     +row-flex()
+    align-items: center
 .headerLogo
     +col()
     +size(9/2)
     +size-lg(9/2)
-.headerNav
+.headerNavLinks
+    display: flex
+.headerLink
+    font-style: normal
+    font-weight: normal
+    font-size: 15px
+    line-height: 59px
+    color: rgba(255, 255, 255, 0.7)
+    text-decoration: none
+    margin: 0 10px
+.headerNavCart
+    // +sprite($icon-cart-png)
 .child
     /*child*/
     +col()
