--- a/src/sass/styles-sprites.sass
+++ b/src/sass/styles-sprites.sass
@@ -2,7 +2,25 @@
 @import 'sprite/svg/sprite'
 @import 'sprite/webp/spriteWEBP'
 
-.icon-png
+.icon-tw-png
     +sprite($icon-tw-png)
-.icon-webp
+.icon-tw-webp
     +sprite($icon-tw-webp)
+.icon-cart-png
+    +sprite($icon-cart-png)
+.icon-chat-png
+    +sprite($icon-chat-png)
+.icon-facebook-png
+    +sprite($icon-facebook-png)
+.icon-info-png
+    +sprite($icon-info-png)
+.icon-instagram-png
+    +sprite($icon-instagram-png)
+.icon-location-png
+    +sprite($icon-location-png)
+.icon-mail-png
+    +sprite($icon-mail-png)
+.icon-phone-png
+    +sprite($icon-phone-png)
+.icon-youtube-png
+    +sprite($icon-youtube-png)
