--- a/src/components/banner/banner.component.pug
+++ b/src/components/banner/banner.component.pug
@@ -1,5 +1,17 @@
 section.banner
     .wrapper
         .bannerFlexContainer
-            h1.page__title-h1 Title h1 Index
-            p.page__text Any textp
+            .bannerText
+                h1.page__title-h1_big POWER
+                h1.page__title-h1 
+                    span More power     
+                    | for your car with RSCHIP
+                p.pageText AIncrease power, save fuel, create dyno charts, Measure acceleration and more
+                .social
+                    .socialItem
+                        .icon.icon-instagram-png
+                        .icon.icon-facebook-png
+                        .icon.icon-youtube-png
+            .bannerImg
+                picture 
+                    +picture("imgBanner1-xs", "imgBanner1-lg", "imgBanner1", 1135)
