--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -1,6 +1,5 @@
 doctype html
 html(lang="en") 
-
     head
         meta(charset="utf-8")
         meta(http-equiv="x-ua-compatible", content="ie=edge")
@@ -13,6 +12,7 @@ html(lang="en")
         block description
             meta(name="description", content="Get extra 20% power and torque for your car. RSCHIP provides fuel saving and better MPG numbers. Try safe chiptuning today with free delivery for US and Canada.")
         block style
+            //- add base styles
             link(rel="stylesheet", href="css/base-styles.css", type="text/css")
         block socialMetaTags
             meta(property="fb:app_id" content="")
@@ -38,8 +38,8 @@ html(lang="en")
             meta(property="twitter:description", content="Get extra 20% power and torque for your car. RSCHIP provides fuel saving and better MPG numbers. Try safe chiptuning today with free delivery for US and Canada.")
             meta(property="twitter:creator", content="Ilia Gromov")
     body
-        include ../data/useDataJSON
-        
+        include ../data/useDataJSON.pug
+        include ../mixins/mixins.pug
         block content
         block style
             link(rel="stylesheet", href="css/viewport/mobileFirst-"+viewportWidth+"px.css", type="text/css")
@@ -47,9 +47,7 @@ html(lang="en")
             each breakPoint in breakPoints
                 link(rel="stylesheet", type="text/css" , media="screen and (min-width:"+breakPoint.width+"px)",  href="css/viewport/media/"+breakPoint.width+"/"+breakPoint.width+"px.css")
 	
-            //- link(rel="stylesheet", href="css/styles-calc.css", type="text/css")
-            //- link(rel="stylesheet", href="css/styles-percent.css", type="text/css") for opera
-
+            //- link(rel="stylesheet", href="css/styles-calc.css", type="text/css") // if you want use old style programming
+           
         block script
-            //- script(src="libs/js/_all/debug-grid-create.js")
             script(src="js/main.js")
