--- a/src/components/banner/banner.component.pug
+++ b/src/components/banner/banner.component.pug
@@ -8,10 +8,9 @@ section.banner
                     | for your car with RSCHIP
                 p.pageText AIncrease power, save fuel, create dyno charts, Measure acceleration and more
                 .social
-                    .socialItem
-                        .icon.icon-instagram-png
-                        .icon.icon-facebook-png
-                        .icon.icon-youtube-png
+                    a.icon.icon-instagram-png(href="javascript:void(0)")
+                    a.icon.icon-facebook-png(href="javascript:void(0)")
+                    a.icon.icon-youtube-png(href="javascript:void(0)")
             .bannerImg
                 picture 
                     +picture("imgBanner1-xs", "imgBanner1-lg", "imgBanner1", 1135)
