--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -14,6 +14,7 @@ header.header
                     a.headerLink(href="javascript:void(0)") Contact us
                 .headerNavCart
                     .icon-cart-png
+                    .headerNavCart__count 3
                 .headerNavBtn
-                    
+                    a.page__btn(href="javascript:void(0)") Shop
                 .headerNavMobileMenu
