--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1,22 +1,35 @@
 /*banner*/
 .banner
     overflow: hidden
-    .page__title-h1_big
-        +shift-right(-6)
+    .page__title-h1
+        margin-top: 46px
+        &_big
+            +shift-right(-9)
+    .pageText
+        margin-top: 31px
 
 .bannerFlexContainer
     +row-flex()
-    align-items: center
+    // align-items: center
 .bannerText
     +col()
-    +size-lg(3)
+    +size-lg(2.8)
     position: relative
+    padding-top: 60px
 .bannerImg
-    +col()
-    +size-lg(9)
+    // +col()
+    +size-lg(9.2)
     +shift-right(-3)
     img
         // width: 100%
+.social
+    display: flex
+    position: absolute
+    bottom: 85px
+    margin: 0 -15px
+    .icon
+        margin: 0 15px
+
 /* __debugGrid__ */
 .debugGrid
     height: 100vh
@@ -42,28 +55,53 @@
 .header
     position: sticky
     top: 0
-    height: 59px
-    margin-bottom: -70px
+    padding-top: 33px
+    // height: 59px
+    // margin-bottom: -70px
 
 .headerFlexContainer
     +row-flex()
     align-items: center
 .headerLogo
     +col()
-    +size(9/2)
-    +size-lg(9/2)
-.headerNavLinks
+    +size-lg(2.8)
+.headerNav
+    +col()
+    +size(6)
+    +size-lg(6.2)
     display: flex
+    flex-wrap: wrap
+    align-items: center
+.headerNavLinks
+    margin: 0 9px
+
 .headerLink
+    font-family: '#{$SFUIText}-Regular'
     font-style: normal
     font-weight: normal
     font-size: 15px
-    line-height: 59px
+    line-height: 100%
     color: rgba(255, 255, 255, 0.7)
     text-decoration: none
-    margin: 0 10px
+    margin: 0 11px
 .headerNavCart
-    // +sprite($icon-cart-png)
+    display: flex
+    align-items: center
+    margin-left: 32px
+    &__count
+        display: flex
+        align-items: center
+        justify-content: center
+        width: 20px
+        height: 20px
+        border-radius: 100%
+        font-size: 12px
+        margin-left: 6px
+        font-family: '#{$SFUIText}-Regular'
+        background: linear-gradient(90deg, rgba(113, 15, 209, 0.9) -210%, rgba(255, 56, 57, 0.9) 100%)
+.headerNavBtn
+    margin-left: 19px
+    // display: inline-flex
 .child
     /*child*/
     +col()
