сделал баннер и адаптив

--- a/src/components/debuggrid/debuggrid.component.sass
+++ b/src/components/debuggrid/debuggrid.component.sass
@@ -14,6 +14,8 @@
     .childFlex
         +col()
         +size(1)
+        +size-md(1)
+        +size-lg(1)
         height: inherit
         outline:  1px solid #ff0
         background: rgba(0, 0, 0, 0.4)
