--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -17,4 +17,4 @@ header.header
                     .headerNavCart__count 3
                 .headerNavBtn
                     a.page__btn(href="javascript:void(0)") Shop
-                .headerNavMobileMenu
+                .headerNavBurgerMenu
