--- a/src/components/banner/banner.component.sass
+++ b/src/components/banner/banner.component.sass
@@ -4,7 +4,7 @@
     .page__title-h1
         margin-top: 46px
         &_big
-            +shift-right(-9)
+            +shift-md-right(-9)
     .pageText
         margin-top: 31px
 
@@ -13,19 +13,29 @@
     // align-items: center
 .bannerText
     +col()
+    +size(9)
+    +size-md(3)
     +size-lg(2.8)
     position: relative
     padding-top: 60px
 .bannerImg
     // +col()
+    width: 100%
+    +size-md(9)
     +size-lg(9.2)
-    +shift-right(-3)
+    +shift-md-right(-3)
     img
-        // width: 100%
+        width: 100%
+        +md-block
+            width: auto
+        +lg-block
+            width: auto
 .social
     display: flex
-    position: absolute
-    bottom: 85px
-    margin: 0 -15px
+    margin: 47px -15px 55px
+    +md-block
+        position: absolute
+        bottom: 85px
+        margin: 0 -15px
     .icon
         margin: 0 15px
