--- a/src/components/header/header.component.sass
+++ b/src/components/header/header.component.sass
@@ -2,25 +2,48 @@
 .header
     position: sticky
     top: 0
-    padding-top: 33px
-    // height: 59px
-    // margin-bottom: -70px
+    z-index: 10
+    background: #000
+    // padding-top: 31px
+    +md-block
+        background: transparent
+    +lg-block
+        background: transparent
+        // padding-top: 36px
 
 .headerFlexContainer
     +row-flex()
     align-items: center
 .headerLogo
     +col()
+    +size(9)
+    +size-sm(4.5)
+    +size-md(2.8)
     +size-lg(2.8)
+    text-align: center
+    padding-top: 28px
+    +sm-block
+        text-align: left
 .headerNav
     +col()
-    +size(6)
+    +size(9)
+    +size-sm(4.5)
+    +size-md(6.2)
     +size-lg(6.2)
     display: flex
     flex-wrap: wrap
     align-items: center
+    justify-content: space-between
+    padding-top: 28px
+    +sm-block
+        justify-content: flex-end
 .headerNavLinks
     margin: 0 9px
+    display: none
+    +md-block
+        display: flex
+    +lg-block
+        display: flex
 
 .headerLink
     font-family: '#{$SFUIText}-Regular'
@@ -34,7 +57,8 @@
 .headerNavCart
     display: flex
     align-items: center
-    margin-left: 32px
+    +sm-block
+        margin-left: 4%
     &__count
         display: flex
         align-items: center
@@ -47,8 +71,15 @@
         font-family: '#{$SFUIText}-Regular'
         background: linear-gradient(90deg, rgba(113, 15, 209, 0.9) -210%, rgba(255, 56, 57, 0.9) 100%)
 .headerNavBtn
-    margin-left: 19px
-    // display: inline-flex
+    +sm-block
+        margin-left: 2%
+    
+.headerNavBurgerMenu
+    width: 35px
+    height: 22px
+    background: #fff
+    +md-block
+        display: none
 .child
     /*child*/
     +col()
