--- a/src/sass/smartgrid/smart-grid-calc.sass
+++ b/src/sass/smartgrid/smart-grid-calc.sass
@@ -6,11 +6,11 @@ $break_sm: 768px
 $break_md: 992px
 $break_lg: 1135px
 
-$offset: 46px
+$offset: 20px
 $offset_xs: $offset
 $offset_sm: $offset
-$offset_md: $offset
-$offset_lg: $offset
+$offset_md: 46px
+$offset_lg: 46px
 
 $offset_one_side: ($offset / 2)
 $offset_xs_one_side: ($offset_xs / 2)
@@ -18,19 +18,45 @@ $offset_sm_one_side: ($offset_sm / 2)
 $offset_md_one_side: ($offset_md / 2)
 $offset_lg_one_side: ($offset_lg / 2)
 
-$fields: 23px
+$fields: 10px
+$fields_md: 23px
+$fields_lg: 23px
 
 =wrapper-full()
     padding-left: $fields
     padding-right: $fields
 
+    +md-block()
+        padding-left: $fields_md
+        padding-right: $fields_md
+
+    +lg-block()
+        padding-left: $fields_lg
+        padding-right: $fields_lg
+
 =row-offsets()
     margin-left: ($offset_one_side * -1)
     margin-right: ($offset_one_side * -1)
 
+    +md-block()
+        margin-left: ($offset_md_one_side * -1)
+        margin-right: ($offset_md_one_side * -1)
+
+    +lg-block()
+        margin-left: ($offset_lg_one_side * -1)
+        margin-right: ($offset_lg_one_side * -1)
+
 =col-offsets($type)
     #{$type}-left: $offset_one_side
     #{$type}-right: $offset_one_side
+
+    +md-block()
+        #{$type}-left: $offset_md_one_side
+        #{$type}-right: $offset_md_one_side
+
+    +lg-block()
+        #{$type}-left: $offset_lg_one_side
+        #{$type}-right: $offset_lg_one_side
 
 =wrapper()
     max-width: 1135px
@@ -337,6 +363,8 @@ $fields: 23px
             > div
                 +col()
                 +size(1)
+                +size-md(1)
+                +size-lg(1)
                 height: inherit
                 outline: $outline
                 background: $background
