--- a/src/sass/variables/variables.sass
+++ b/src/sass/variables/variables.sass
@@ -1,4 +1,4 @@
 $color_white: #ffffff
 $color_black: #000
-$color_scrollbar-track: $color_white
-$color_scrollbar-thumb: #cccccc
+$color_scrollbar-track: transparent
+$color_scrollbar-thumb: #333333
