--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,6 +7,7 @@ block content
 	main.page
 		include ../components/banner/banner.component.pug
 		a(href="page/page.html").page__text page2
+	include ../components/footer/footer.component.pug
 block append style
 	
 block append script
