--- a/src/sass/styles-sprites.sass
+++ b/src/sass/styles-sprites.sass
@@ -24,3 +24,9 @@
     +sprite($icon-phone-png)
 .icon-youtube-png
     +sprite($icon-youtube-png)
+.icon-lifetime-png
+    +sprite($icon-lifetime-png)
+.icon-return-png
+    +sprite($icon-return-png)
+.icon-free-png
+    +sprite($icon-free-png)
