--- a/src/sass/sprite/webp/spriteWEBP.sass
+++ b/src/sass/sprite/webp/spriteWEBP.sass
@@ -15,10 +15,10 @@ $icon-fb-webp-offset-x: -212px
 $icon-fb-webp-offset-y: 0px
 $icon-fb-webp-width: 40px
 $icon-fb-webp-height: 40px
-$icon-fb-webp-total-width: 252px
-$icon-fb-webp-total-height: 230px
+$icon-fb-webp-total-width: 270px
+$icon-fb-webp-total-height: 239px
 $icon-fb-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-fb-webp: (212px, 0px, -212px, 0px, 40px, 40px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'icon-fb-webp', )
+$icon-fb-webp: (212px, 0px, -212px, 0px, 40px, 40px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'icon-fb-webp', )
 $icon-tw-webp-name: 'icon-tw-webp'
 $icon-tw-webp-x: 212px
 $icon-tw-webp-y: 40px
@@ -26,21 +26,21 @@ $icon-tw-webp-offset-x: -212px
 $icon-tw-webp-offset-y: -40px
 $icon-tw-webp-width: 40px
 $icon-tw-webp-height: 40px
-$icon-tw-webp-total-width: 252px
-$icon-tw-webp-total-height: 230px
+$icon-tw-webp-total-width: 270px
+$icon-tw-webp-total-height: 239px
 $icon-tw-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-tw-webp: (212px, 40px, -212px, -40px, 40px, 40px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'icon-tw-webp', )
+$icon-tw-webp: (212px, 40px, -212px, -40px, 40px, 40px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'icon-tw-webp', )
 $icon-cart-webp-name: 'iconCart-webp'
-$icon-cart-webp-x: 212px
-$icon-cart-webp-y: 113px
-$icon-cart-webp-offset-x: -212px
-$icon-cart-webp-offset-y: -113px
+$icon-cart-webp-x: 0px
+$icon-cart-webp-y: 212px
+$icon-cart-webp-offset-x: 0px
+$icon-cart-webp-offset-y: -212px
 $icon-cart-webp-width: 27px
 $icon-cart-webp-height: 27px
-$icon-cart-webp-total-width: 252px
-$icon-cart-webp-total-height: 230px
+$icon-cart-webp-total-width: 270px
+$icon-cart-webp-total-height: 239px
 $icon-cart-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-cart-webp: (212px, 113px, -212px, -113px, 27px, 27px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconCart-webp', )
+$icon-cart-webp: (0px, 212px, 0px, -212px, 27px, 27px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconCart-webp', )
 $icon-chat-webp-name: 'iconChat-webp'
 $icon-chat-webp-x: 0px
 $icon-chat-webp-y: 0px
@@ -48,92 +48,125 @@ $icon-chat-webp-offset-x: 0px
 $icon-chat-webp-offset-y: 0px
 $icon-chat-webp-width: 212px
 $icon-chat-webp-height: 212px
-$icon-chat-webp-total-width: 252px
-$icon-chat-webp-total-height: 230px
+$icon-chat-webp-total-width: 270px
+$icon-chat-webp-total-height: 239px
 $icon-chat-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-chat-webp: (0px, 0px, 0px, 0px, 212px, 212px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconChat-webp', )
+$icon-chat-webp: (0px, 0px, 0px, 0px, 212px, 212px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconChat-webp', )
 $icon-facebook-webp-name: 'iconFacebook-webp'
-$icon-facebook-webp-x: 239px
-$icon-facebook-webp-y: 113px
-$icon-facebook-webp-offset-x: -239px
-$icon-facebook-webp-offset-y: -113px
+$icon-facebook-webp-x: 252px
+$icon-facebook-webp-y: 18px
+$icon-facebook-webp-offset-x: -252px
+$icon-facebook-webp-offset-y: -18px
 $icon-facebook-webp-width: 10px
 $icon-facebook-webp-height: 17px
-$icon-facebook-webp-total-width: 252px
-$icon-facebook-webp-total-height: 230px
+$icon-facebook-webp-total-width: 270px
+$icon-facebook-webp-total-height: 239px
 $icon-facebook-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-facebook-webp: (239px, 113px, -239px, -113px, 10px, 17px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconFacebook-webp', )
+$icon-facebook-webp: (252px, 18px, -252px, -18px, 10px, 17px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconFacebook-webp', )
+$icon-free-webp-name: 'iconFree-webp'
+$icon-free-webp-x: 212px
+$icon-free-webp-y: 80px
+$icon-free-webp-offset-x: -212px
+$icon-free-webp-offset-y: -80px
+$icon-free-webp-width: 40px
+$icon-free-webp-height: 31px
+$icon-free-webp-total-width: 270px
+$icon-free-webp-total-height: 239px
+$icon-free-webp-image: '../assets/icons/webp/spriteWEBP.webp'
+$icon-free-webp: (212px, 80px, -212px, -80px, 40px, 31px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconFree-webp', )
 $icon-info-webp-name: 'iconInfo-webp'
 $icon-info-webp-x: 212px
-$icon-info-webp-y: 80px
+$icon-info-webp-y: 111px
 $icon-info-webp-offset-x: -212px
-$icon-info-webp-offset-y: -80px
+$icon-info-webp-offset-y: -111px
 $icon-info-webp-width: 33px
 $icon-info-webp-height: 33px
-$icon-info-webp-total-width: 252px
-$icon-info-webp-total-height: 230px
+$icon-info-webp-total-width: 270px
+$icon-info-webp-total-height: 239px
 $icon-info-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-info-webp: (212px, 80px, -212px, -80px, 33px, 33px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconInfo-webp', )
+$icon-info-webp: (212px, 111px, -212px, -111px, 33px, 33px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconInfo-webp', )
 $icon-instagram-webp-name: 'iconInstagram-webp'
-$icon-instagram-webp-x: 0px
-$icon-instagram-webp-y: 212px
-$icon-instagram-webp-offset-x: 0px
-$icon-instagram-webp-offset-y: -212px
+$icon-instagram-webp-x: 252px
+$icon-instagram-webp-y: 0px
+$icon-instagram-webp-offset-x: -252px
+$icon-instagram-webp-offset-y: 0px
 $icon-instagram-webp-width: 18px
 $icon-instagram-webp-height: 18px
-$icon-instagram-webp-total-width: 252px
-$icon-instagram-webp-total-height: 230px
+$icon-instagram-webp-total-width: 270px
+$icon-instagram-webp-total-height: 239px
 $icon-instagram-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-instagram-webp: (0px, 212px, 0px, -212px, 18px, 18px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconInstagram-webp', )
+$icon-instagram-webp: (252px, 0px, -252px, 0px, 18px, 18px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconInstagram-webp', )
+$icon-lifetime-webp-name: 'iconLifetime-webp'
+$icon-lifetime-webp-x: 212px
+$icon-lifetime-webp-y: 176px
+$icon-lifetime-webp-offset-x: -212px
+$icon-lifetime-webp-offset-y: -176px
+$icon-lifetime-webp-width: 30px
+$icon-lifetime-webp-height: 32px
+$icon-lifetime-webp-total-width: 270px
+$icon-lifetime-webp-total-height: 239px
+$icon-lifetime-webp-image: '../assets/icons/webp/spriteWEBP.webp'
+$icon-lifetime-webp: (212px, 176px, -212px, -176px, 30px, 32px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconLifetime-webp', )
 $icon-location-webp-name: 'iconLocation-webp'
-$icon-location-webp-x: 212px
-$icon-location-webp-y: 140px
-$icon-location-webp-offset-x: -212px
-$icon-location-webp-offset-y: -140px
+$icon-location-webp-x: 27px
+$icon-location-webp-y: 212px
+$icon-location-webp-offset-x: -27px
+$icon-location-webp-offset-y: -212px
 $icon-location-webp-width: 20px
 $icon-location-webp-height: 25px
-$icon-location-webp-total-width: 252px
-$icon-location-webp-total-height: 230px
+$icon-location-webp-total-width: 270px
+$icon-location-webp-total-height: 239px
 $icon-location-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-location-webp: (212px, 140px, -212px, -140px, 20px, 25px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconLocation-webp', )
+$icon-location-webp: (27px, 212px, -27px, -212px, 20px, 25px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconLocation-webp', )
 $icon-mail-webp-name: 'iconMail-webp'
-$icon-mail-webp-x: 212px
-$icon-mail-webp-y: 165px
-$icon-mail-webp-offset-x: -212px
-$icon-mail-webp-offset-y: -165px
+$icon-mail-webp-x: 64px
+$icon-mail-webp-y: 212px
+$icon-mail-webp-offset-x: -64px
+$icon-mail-webp-offset-y: -212px
 $icon-mail-webp-width: 24px
 $icon-mail-webp-height: 17px
-$icon-mail-webp-total-width: 252px
-$icon-mail-webp-total-height: 230px
+$icon-mail-webp-total-width: 270px
+$icon-mail-webp-total-height: 239px
 $icon-mail-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-mail-webp: (212px, 165px, -212px, -165px, 24px, 17px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconMail-webp', )
+$icon-mail-webp: (64px, 212px, -64px, -212px, 24px, 17px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconMail-webp', )
 $icon-phone-webp-name: 'iconPhone-webp'
-$icon-phone-webp-x: 232px
-$icon-phone-webp-y: 140px
-$icon-phone-webp-offset-x: -232px
-$icon-phone-webp-offset-y: -140px
+$icon-phone-webp-x: 47px
+$icon-phone-webp-y: 212px
+$icon-phone-webp-offset-x: -47px
+$icon-phone-webp-offset-y: -212px
 $icon-phone-webp-width: 17px
 $icon-phone-webp-height: 25px
-$icon-phone-webp-total-width: 252px
-$icon-phone-webp-total-height: 230px
+$icon-phone-webp-total-width: 270px
+$icon-phone-webp-total-height: 239px
 $icon-phone-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-phone-webp: (232px, 140px, -232px, -140px, 17px, 25px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconPhone-webp', )
+$icon-phone-webp: (47px, 212px, -47px, -212px, 17px, 25px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconPhone-webp', )
+$icon-return-webp-name: 'iconReturn-webp'
+$icon-return-webp-x: 212px
+$icon-return-webp-y: 144px
+$icon-return-webp-offset-x: -212px
+$icon-return-webp-offset-y: -144px
+$icon-return-webp-width: 32px
+$icon-return-webp-height: 32px
+$icon-return-webp-total-width: 270px
+$icon-return-webp-total-height: 239px
+$icon-return-webp-image: '../assets/icons/webp/spriteWEBP.webp'
+$icon-return-webp: (212px, 144px, -212px, -144px, 32px, 32px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconReturn-webp', )
 $icon-youtube-webp-name: 'iconYoutube-webp'
-$icon-youtube-webp-x: 212px
-$icon-youtube-webp-y: 182px
-$icon-youtube-webp-offset-x: -212px
-$icon-youtube-webp-offset-y: -182px
+$icon-youtube-webp-x: 88px
+$icon-youtube-webp-y: 212px
+$icon-youtube-webp-offset-x: -88px
+$icon-youtube-webp-offset-y: -212px
 $icon-youtube-webp-width: 22px
 $icon-youtube-webp-height: 16px
-$icon-youtube-webp-total-width: 252px
-$icon-youtube-webp-total-height: 230px
+$icon-youtube-webp-total-width: 270px
+$icon-youtube-webp-total-height: 239px
 $icon-youtube-webp-image: '../assets/icons/webp/spriteWEBP.webp'
-$icon-youtube-webp: (212px, 182px, -212px, -182px, 22px, 16px, 252px, 230px, '../assets/icons/webp/spriteWEBP.webp', 'iconYoutube-webp', )
-$spritesheet-width: 252px
-$spritesheet-height: 230px
+$icon-youtube-webp: (88px, 212px, -88px, -212px, 22px, 16px, 270px, 239px, '../assets/icons/webp/spriteWEBP.webp', 'iconYoutube-webp', )
+$spritesheet-width: 270px
+$spritesheet-height: 239px
 $spritesheet-image: '../assets/icons/webp/spriteWEBP.webp'
-$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-cart-webp, $icon-chat-webp, $icon-facebook-webp, $icon-info-webp, $icon-instagram-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-youtube-webp, )
-$spritesheet: (252px, 230px, '../assets/icons/webp/spriteWEBP.webp', $spritesheet-sprites, )
+$spritesheet-sprites: ($icon-fb-webp, $icon-tw-webp, $icon-cart-webp, $icon-chat-webp, $icon-facebook-webp, $icon-free-webp, $icon-info-webp, $icon-instagram-webp, $icon-lifetime-webp, $icon-location-webp, $icon-mail-webp, $icon-phone-webp, $icon-return-webp, $icon-youtube-webp, )
+$spritesheet: (270px, 239px, '../assets/icons/webp/spriteWEBP.webp', $spritesheet-sprites, )
 
 // The provided mixins are intended to be used with the array-like variables
 //
