--- a/src/components/footer/footer.component.pug
+++ b/src/components/footer/footer.component.pug
@@ -8,10 +8,10 @@ footer.footer
             .footerContacts 
                 .footerContactsItem
                     i.icon.icon-phone-png
-                    a(href="tel:+1 800 796 16 17") +1 800 796 16 17
+                    a(href="tel:+1 800 796 16 17").phone +1 800 796 16 17
                 .footerContactsItem
                     i.icon.icon-mail-png 
-                    a(href="mailto:rschiphelp@gmail.com") rschiphelp@gmail.com
+                    a(href="mailto:rschiphelp@gmail.com").email rschiphelp@gmail.com
                 .footerContactsItem
                     i.icon.icon-location-png 
                     address 1201 East 5th Street North Little Rock, Arkansas USA, 72114
@@ -40,25 +40,127 @@ footer.footer
             hr
             .footerLinks
                 a(href="javascript:void(0)") Acura 
-            .footerLinks
                 a(href="javascript:void(0)") Alfa 
-            .footerLinks
                 a(href="javascript:void(0)") Romeo 
-            .footerLinks
-                a(href="javascript:void(0)") Alpina
-            .footerLinks 
+                a(href="javascript:void(0)") Alpina 
                 a(href="javascript:void(0)") Aston 
-            .footerLinks
                 a(href="javascript:void(0)") Martin 
-            .footerLinks
                 a(href="javascript:void(0)") Audi 
-            .footerLinks
                 a(href="javascript:void(0)") Baojun 
-            .footerLinks
                 a(href="javascript:void(0)") Beiben 
                 a(href="javascript:void(0)") Beijing 
                 a(href="javascript:void(0)") Bentley 
                 a(href="javascript:void(0)") BMW 
                 a(href="javascript:void(0)") Borgward 
                 a(href="javascript:void(0)") Buick 
-                a(href="javascript:void(0)") BYD
+                a(href="javascript:void(0)") BYD 
+            .footerLinks
+                a(href="javascript:void(0)") Cadillac 
+                a(href="javascript:void(0)") Changan 
+                a(href="javascript:void(0)") Changfeng 
+                a(href="javascript:void(0)") Chery 
+                a(href="javascript:void(0)") Chevrolet 
+                a(href="javascript:void(0)") Chrysler 
+                a(href="javascript:void(0)") Chrysler 
+                a(href="javascript:void(0)") Citroen 
+                a(href="javascript:void(0)") Cupra 
+                a(href="javascript:void(0)") Dacia 
+                a(href="javascript:void(0)") Daewoo 
+                a(href="javascript:void(0)") Daihatsu 
+                a(href="javascript:void(0)") DFSK 
+            .footerLinks
+                a(href="javascript:void(0)") Dodge 
+                a(href="javascript:void(0)") Dongfeng 
+                a(href="javascript:void(0)") FAW 
+                a(href="javascript:void(0)") Ferrari 
+                a(href="javascript:void(0)") Fiat 
+                a(href="javascript:void(0)") Ford 
+                a(href="javascript:void(0)") Foton 
+                a(href="javascript:void(0)") GAC 
+                a(href="javascript:void(0)") Geely 
+                a(href="javascript:void(0)") GMC 
+                a(href="javascript:void(0)") GMW 
+                a(href="javascript:void(0)") Great 
+                a(href="javascript:void(0)") Wall 
+                a(href="javascript:void(0)") Guangqi 
+            .footerLinks
+                a(href="javascript:void(0)") Haval 
+                a(href="javascript:void(0)") Hino 
+                a(href="javascript:void(0)") Holden 
+                a(href="javascript:void(0)") Honda 
+                a(href="javascript:void(0)") Hummer 
+                a(href="javascript:void(0)") Hyundai 
+                a(href="javascript:void(0)") Infiniti 
+                a(href="javascript:void(0)") Isuzu 
+                a(href="javascript:void(0)") Iveco 
+                a(href="javascript:void(0)") Jac 
+                a(href="javascript:void(0)") Jaguar 
+                a(href="javascript:void(0)") Jeep 
+                a(href="javascript:void(0)") KIA
+            .footerLinks 
+                a(href="javascript:void(0)") Kowloon 
+                a(href="javascript:void(0)") KTM 
+                a(href="javascript:void(0)") Lada 
+                a(href="javascript:void(0)") Lamborghini 
+                a(href="javascript:void(0)") Lancia 
+                a(href="javascript:void(0)") Land 
+                a(href="javascript:void(0)") Rover 
+                a(href="javascript:void(0)") Landwind 
+                a(href="javascript:void(0)") Lexus 
+                a(href="javascript:void(0)") Lifan 
+                a(href="javascript:void(0)") Lincoln 
+                a(href="javascript:void(0)") Lotus 
+                a(href="javascript:void(0)") Luxgen 
+                a(href="javascript:void(0)") Lynk 
+            .footerLinks
+                a(href="javascript:void(0)") Mahindra 
+                a(href="javascript:void(0)") Maruti 
+                a(href="javascript:void(0)") Maserati 
+                a(href="javascript:void(0)") Maybach 
+                a(href="javascript:void(0)") Mazda 
+                a(href="javascript:void(0)") McLaren 
+                a(href="javascript:void(0)") Mercedes 
+                a(href="javascript:void(0)") MG 
+                a(href="javascript:void(0)") Mini 
+                a(href="javascript:void(0)") Mitsubishi 
+                a(href="javascript:void(0)") Nissan 
+                a(href="javascript:void(0)") Opel 
+                a(href="javascript:void(0)") Pagani 
+            .footerLinks
+                a(href="javascript:void(0)") Pontiac 
+                a(href="javascript:void(0)") Porsche 
+                a(href="javascript:void(0)") Proton 
+                a(href="javascript:void(0)") Qoros 
+                a(href="javascript:void(0)") Renault 
+                a(href="javascript:void(0)") Roewe 
+                a(href="javascript:void(0)") Rolls-Royce 
+                a(href="javascript:void(0)") Rover 
+                a(href="javascript:void(0)") Saab 
+                a(href="javascript:void(0)") Sag 
+                a(href="javascript:void(0)") SAIC 
+                a(href="javascript:void(0)") Sany 
+                a(href="javascript:void(0)") Saturn 
+            .footerLinks
+                a(href="javascript:void(0)") Scion 
+                a(href="javascript:void(0)") Seat 
+                a(href="javascript:void(0)") Sino 
+                a(href="javascript:void(0)") Truck 
+                a(href="javascript:void(0)") Skoda 
+                a(href="javascript:void(0)") Smart 
+                a(href="javascript:void(0)") Soueast 
+                a(href="javascript:void(0)") SsangYong 
+                a(href="javascript:void(0)") Subaru 
+                a(href="javascript:void(0)") Suzuki 
+                a(href="javascript:void(0)") TATA 
+                a(href="javascript:void(0)") Toyota 
+                a(href="javascript:void(0)") Troller 
+                a(href="javascript:void(0)") UAZ 
+            .footerLinks
+                a(href="javascript:void(0)") Vauxhall 
+                a(href="javascript:void(0)") Vinfast 
+                a(href="javascript:void(0)") Volvo 
+                a(href="javascript:void(0)") Vortex 
+                a(href="javascript:void(0)") VW 
+                a(href="javascript:void(0)") Wey 
+                a(href="javascript:void(0)") XCMG 
+                a(href="javascript:void(0)") Zotye
