--- a/src/sass/variables/variables.sass
+++ b/src/sass/variables/variables.sass
@@ -2,3 +2,6 @@ $color_white: #ffffff
 $color_black: #000
 $color_scrollbar-track: transparent
 $color_scrollbar-thumb: #333333
+
+$color_1: #700ED2
+$color_2: #FF3838
