--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -66,7 +66,8 @@
 /*footer*/
 .footer
     background: #111111
-    padding-top: 44px
+    // padding-top: 44px
+    padding-top: 53px
     h4
         +col()
         width: 100%
@@ -80,8 +81,13 @@
 .footerLogo
     +col()
     +size(9)
-    +size-md(2)
-    +size-lg(2)
+    +size-md(1.8)
+    +size-lg(1.8)
+
+    +md-block
+        padding-top: 10px
+    +lg-block
+        padding-top: 10px
 .footerDealer
     +col()
     +size(9)
@@ -94,6 +100,12 @@
     +size-lg(5)
     display: flex
     flex-wrap: wrap
+    a,
+    address
+        font-family: #{$SFUIText}-Bold
+        color: $color_white
+    .email
+        text-decoration: underline
 
 .footerContactsItem
     +col()
@@ -115,9 +127,24 @@
     +size(9)
     +size-md(3)
     +size-lg(3)
+    +md-block
+        padding-top: 30px
+    +lg-block
+        padding-top: 30px
+    a
+        background-image: linear-gradient(transparent, transparent), linear-gradient(to right, #700ED2 , #FF3838)
+        background-clip: text
+        color: transparent
+    h5
+        margin-left: 20px
+
     &__title
         display: flex
         align-items: center
+    .page__text
+        padding: 12px 30px 0 46px
+        min-height: 100px
+    
 .footerLinks
     +col()
     +size(9)
