--- a/src/sass/base/base.sass
+++ b/src/sass/base/base.sass
@@ -14,13 +14,16 @@
 
 @font-face
   +font($SFUIDisplay, '#{$SFUIDisplay}-Regular')
-
 @font-face
   +font($SFUIDisplay, '#{$SFUIDisplay}-Bold')
 @font-face
   +font($SFUIDisplay, '#{$SFUIDisplay}-Black')
+
 @font-face
   +font($SFUIText, '#{$SFUIText}-Regular')
+@font-face
+  +font($SFUIText, '#{$SFUIText}-Bold')
+
 body
   font-family: $fontRegular
   // background: #eee
@@ -38,15 +41,16 @@ input
     outline: none
 
 a
-  font-family: '#{$SFUIText}-Regular'
+  font-family: #{$SFUIText}-Regular
   font-style: normal
   font-weight: normal
   font-size: 15px
   line-height: 100%
   color: rgba(255, 255, 255, 0.7)
+  // color: linear-gradient(to right, #700ED2 , #FF3838)
   text-decoration: none
 h1
-  font-family: '#{$SFUIDisplay}-Bold'
+  font-family: #{$SFUIDisplay}-Bold
   font-weight: 800
   font-size: 48px
   line-height: 59px
@@ -141,12 +145,23 @@ address
     /* identical to box height, or 421% */
     letter-spacing: 0.05em
     color: #FFFFFF
-    border: 2px solid #FF3838
+    
+    // border: 2px solid transparent
+    // border-radius: 123px
+    // border-image: linear-gradient(to right, #700ED2 , #FF3838)
+    // border-image-slice: 1
+    border: double 2px transparent
+    border-radius: 123px
+    background-image: linear-gradient(transparent, transparent), linear-gradient(to right, #700ED2 , #FF3838)
+    background-origin: border-box
+    background-clip: content-box, border-box
+    
     padding: 14px 36px
+    
     display: flex
     align-items: center
     box-sizing: border-box
     text-transform: uppercase
     text-decoration: none
-    background: transparent
-    // background: liner-gradient(#700ED2 #FF3838)
+    background-color: transparent
+    
